# rag-builder

./: .gitignore  LICENSE  README.md  app.py  cdk-outputs.json  cdk.context.json  cdk.json  pyproject.toml
.github/workflows/: cd.yml  ci.yml
doc/: bugs.md  features.md  initial-todo.md  roadmap.md  todo.md
doc/spec/: frontend.md
evaluation/: .gitignore  pyproject.toml
evaluation/src/evaluation/: console.py  create_kb.py  generate_testset.py  main.py  run_experiment.py  visualize_experiments.py
evaluation/system-prompts/: v0.md
evaluation/tapes/: config.tape  create-kb.tape  generate-testset.tape  main.tape  run-experiment.tape  visualize-experiments.tape
rag_builder/: constructs.py  stack.py
rag_builder/fargate/chainlit-app/: Dockerfile  agent_instructions.md  chainlit.md  main.py  pyproject.toml  requirements.txt
rag_builder/fargate/chainlit-app/.chainlit/: config.toml
rag_builder/fargate/chainlit-app/app/: actions.py  agent.py  auth.py  data_persistence.py
rag_builder/lambda/backend-api/: pyproject.toml  requirements.txt  test
rag_builder/lambda/backend-api/app/: main.py
rag_builder/lambda/backend-api/app/routers/: document.py  documents.py  ingest.py  query.py
rag_builder/lambda/backend-api/tests/: conftest.py  test_documents.py  test_main.py
rag_builder/lambda/delete/: function.py  pyproject.toml  requirements.txt
rag_builder/lambda/delete-document/: Dockerfile  deleter.py  function.py  pyproject.toml  requirements.txt
rag_builder/lambda/delete-document/src/delete_document/: deleter.py  function.py
rag_builder/lambda/delete-document/tests/: conftest.py  test_handler.py
rag_builder/lambda/frontend-app/: pyproject.toml  requirements.txt
rag_builder/lambda/frontend-app/app/: main.py
rag_builder/lambda/frontend-app/app/routers/: auth.py  frontend.py
rag_builder/lambda/frontend-app/app/templates/: base.html  index.html  logged_out.html  partial_base.html
rag_builder/lambda/frontend-app/app/templates/knowledge_base/: available_documents.html  available_documents_loader.html  available_documents_table.html  query.html  query_response.html
rag_builder/lambda/frontend-app/app/templates/load_document/: load_history.html  load_history_loader.html  load_history_table.html  new_document.html  new_document_success.html
rag_builder/lambda/frontend-app/app/utils/: auth.py  env.py
rag_builder/lambda/ingest/: Dockerfile  function.py  ingestor.py  pyproject.toml  requirements.txt
rag_builder/lambda/ingest-document/: function.py  ingestor.py  pyproject.toml
rag_builder/lambda/load-document/: function.py  loader.py  pyproject.toml  requirements.txt
rag_builder/lambda/load-document/src/load_document/: auth.py  function.py  loader.py
rag_builder/lambda/load-document/tests/: conftest.py  test_function.py  test_handler.py
rag_builder/lambda/optimize-vector-store/: function.py  pyproject.toml  requirements.txt
rag_builder/lambda/optimize-vector-store/src/optimize_vector_store/: function.py  optimizer.py
rag_builder/lambda/optimize-vector-store/tests/: conftest.py  test_handler.py
rag_builder/lambda/query/: function.py  pyproject.toml
rag_builder/lambda/query-knowledge-base/: agent.py  function.py  instructions.md  pyproject.toml  requirements.txt
tests/: conftest.py  test_stack.py
tests/__snapshots__/test_stack/: TestStack.test_stack.json
