[project]
name = "evaluation"
version = "0.1.0"
requires-python = ">= 3.12"
dependencies = ["ragas>=0.4.0", "load-document", "typer>=0.20.0"]

[project.scripts]
evaluate = "evaluation.main:app"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources]
load-document = { path = "../rag_builder/lambda/load-document" }
