[project]
name = "chainlit-app"
version = "0.1.0"
requires-python = ">= 3.12"
dependencies = [
    "chainlit>=2.9.0",
    "httpx>=0.28.1",
    "lancedb>=0.25.3",
    "langchain-community>=0.4.1",
    "langchain[aws]>=1.0.5",
    "pandas>=2.3.3",
]

[dependency-groups]
dev = [
    "pandas-stubs>=2.3.2.250926",
]
