[project]
name = "backend-api"
version = "0.1.0"
requires-python = ">= 3.12"
dependencies = ["boto3>=1.40.72", "fastapi[standard]>=0.121.0"]

[dependency-groups]
dev = [
  "boto3-stubs[dynamodb,sqs]>=1.41.3",
  "coverage>=7.12.0",
  "moto[sqs]>=5.1.17",
  "pytest>=9.0.1",
  "pytest-cov>=7.0.0",
  "pytest-env>=1.2.0",
]

[tool.pytest]
pythonpath = ["."]

[tool.coverage.run]
source = ["app"]

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.pytest_env]
AWS_DEFAULT_REGION = "us-east-1"
AWS_ACCESS_KEY_ID = "testing"
AWS_SECRET_ACCESS_KEY = "testing"
