[project]
name = "delete-document"
version = "0.1.0"
requires-python = ">= 3.12"
dependencies = [
  "aws-lambda-powertools>=3.22.0",
  "boto3>=1.40.60",
  "lancedb>=0.25.2",
]

[dependency-groups]
dev = [
  "coverage>=7.12.0",
  "pytest>=9.0.1",
  "pytest-cov>=7.0.0",
  "pytest-env>=1.2.0",
  "pytest-mock>=3.15.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.pytest_env]
VECTOR_STORE_BUCKET = "test-bucket"

[tool.coverage.run]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
