[project]
name = "load-document"
version = "0.1.0"
requires-python = ">= 3.12"
dependencies = [
  "aws-lambda-powertools>=3.22.0",
  "httpx>=0.28.1",
  "httpx-auth>=0.23.1",
  "lancedb>=0.25.2",
  "langchain>=1.0.2",
  "langchain-aws>=1.0.0",
  "langchain-community>=0.4",
  "pypdf>=6.1.3",
]

[dependency-groups]
dev = [
  "coverage>=7.12.0",
  "pytest>=9.0.1",
  "pytest-cov>=7.0.0",
  "pytest-env>=1.2.0",
  "pytest-mock>=3.15.1",
  "respx>=0.22.0",
]

[tool.pytest]
pythonpath = ["."]

[tool.pytest_env]
VECTOR_STORE_BUCKET = "test-bucket"
EMBEDDINGS_MODEL = "test-model"
BACKEND_API_URL = "http://test-api"
AWS_DEFAULT_REGION = "us-east-1"
AWS_REGION = "us-east-1"
AWS_ACCESS_KEY_ID = "testing"
AWS_SECRET_ACCESS_KEY = "testing"
AWS_SECURITY_TOKEN = "testing"
AWS_SESSION_TOKEN = "testing"

[tool.coverage.run]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
